ext {
    shadow = "com.github.johnrengelman.shadow"
}

allprojects {
    repositories {
        maven {
            name 'DarkCube'
            credentials PasswordCredentials
            url 'https://nexus.darkcube.eu/repository/darkcube/'
        }
        mavenCentral()
        maven { url = 'https://repo.papermc.io/repository/maven-public/' }
        maven {
            url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
            content {
                includeGroup 'org.bukkit'
                includeGroup 'org.spigotmc'
            }
        }
        maven { url = 'https://libraries.minecraft.net' }
        maven { url = 'https://repo.dmulloy2.net/repository/public/' }
        maven { url = 'https://repo.cloudnetservice.eu/repository/releases/' }
        maven { url = 'https://repo.viaversion.com' }
    }
    pluginManager.withPlugin('java') {
        java {
            toolchain.languageVersion.set(JavaLanguageVersion.of(8))
        }

        javadoc.options.encoding = 'UTF-8'
        compileJava.options.encoding = 'UTF-8'
    }
    pluginManager.withPlugin('io.freefair.aggregate-javadoc') {
        aggregateJavadoc.options.encoding = 'UTF-8'
    }

    tasks.withType(JavaCompile) {
        options.deprecation = true
    }
}

